syntax = "proto3";
package pb;
option go_package = "../pb";


//gRPC API Unary
message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

// gRPC API Stream
message UserResultStream {
    string status = 1;
    User user = 2;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc AddUserStream (User) returns (stream UserResultStream);
}
